	PR c++/44160 	* parser.c (cp_parser_lambda_body): Share code between 	simple and complex cases instead of using cp_parser_function_body.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175123 138bc75d-0d04-0410-961f-82ee72b054a4